# Table-Tennis-Robot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
arduino/: robot_controller.ino
config/: protocol.md
include/: robot_controller.hpp  routine_manager.hpp  trajectory.hpp  types.hpp  vision_pipeline.hpp
scripts/: ec2_setup.sh
src/: main.cpp  robot_controller.cpp  routine_manager.cpp  trajectory.cpp  vision_pipeline.cpp
